[gd_scene load_steps=2 format=2]

[ext_resource path="res://WinScreen.gd" type="Script" id=1]

[node name="WinScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.654902, 0.0117647, 1 )

[node name="ContinueButton" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.614
margin_left = -52.0
margin_right = 52.0
margin_bottom = 20.0
text = "Continue"

[node name="QuitRunButton" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.686
anchor_right = 0.5
anchor_bottom = 0.7
margin_left = -52.0
margin_right = 52.0
margin_bottom = 20.0
text = "Quit Run"

[node name="Label" type="Label" parent="ColorRect"]
visible = false
margin_left = 384.0
margin_top = 240.0
margin_right = 478.0
margin_bottom = 254.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Current Score :"

[node name="ScoreTotal" type="Label" parent="ColorRect"]
visible = false
margin_left = 540.0
margin_top = 240.0
margin_right = 596.0
margin_bottom = 255.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0000000"

[node name="Label2" type="Label" parent="ColorRect"]
visible = false
anchor_right = 0.02
anchor_bottom = 0.012
margin_left = 400.0
margin_top = 200.0
margin_right = 461.52
margin_bottom = 206.8
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Level Time : "

[node name="TimeTotal" type="Label" parent="ColorRect"]
visible = false
margin_left = 540.0
margin_top = 200.0
margin_right = 580.0
margin_bottom = 214.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "00:00"

[node name="Label3" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.0
margin_top = 101.0
margin_right = 32.0
margin_bottom = 115.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Level Won"

[connection signal="visibility_changed" from="." to="." method="_on_WinScreen_visibility_changed"]
[connection signal="pressed" from="ColorRect/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="ColorRect/QuitRunButton" to="." method="_on_QuitRunButton_pressed"]
